syntax = "proto3";

option csharp_namespace = "Facade2";

package userProducts;

import "decimalValue.proto";

service SenderProductsService {
    rpc GetUserProducts (GetUserProductsRequest) returns (GetUserProductsReply);
}

message GetUserProductsRequest {
    string user_id = 1;
} 

message GetUserProductsReply {
    string user_id = 1;
    repeated Product products = 2;
    repeated string errors = 3; 
}

message Product { 
    string productId = 1; 
    string name = 2; 
    string authorMarker = 3; 
    customTypes.DecimalValue price = 4; 
    string description = 5; 
    int32 count = 6; 
}



