syntax = "proto3";

option csharp_namespace = "UserBagMicroservice.Protos";

service UserBriefcase {
	rpc GetUserProducts (GetUserProductsRequest) returns (GetUserProductsResponse);
}

message Product {
	string product_id = 1;
	string name = 2;
	string author_id = 3;
	int32 quantity = 4;
}

message UserBag {
	string user_id = 1;
	repeated Product products = 2;
}

enum Errors {
	USER_NOT_FOUND = 0;
	USER_ID_MATCHES_EXISTING = 1;
	USER_NOT_HAVE_PRODUCT = 2;
	USER_NOT_HAVE_QUANTITY_PRODUCT = 3;
	QUANTITY_SALE_EXCEEDS_AVAILABLE_QUANTITY = 4;
	PRODUCT_ON_SALE = 5;
}

message ToWrapper {
	repeated Product products = 1;
}

message GetUserProductsRequest {
	string user_id = 1;
}

message GetUserProductsResponse {
	oneof result {
		ToWrapper wrapper = 2;
		Errors error = 3;
	}
}

message UserRegisteredEvent {
    string user_id = 1;
}

message OrderCompletedEvent {
 string message_id = 1;
 string user_id_from = 2;
 string user_id_to = 3;
 string product_id = 4;
 int32 quantity = 5;
}

message Order_ProductSoldEvent {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message Briefcase_ProductSoldEventResponse {
    string user_id = 1;
    oneof result {
    	Errors error = 2;
    	bool success = 3;
    }
}

message Briefcase_ProductQuantityDecreaseEvent {   
   string user_id = 1;
   string product_id = 2;
   int32 quantity = 3;
}

message Briefcase_ProductRemovedEvent {
   string user_id = 1;
   string product_id = 2;
}